# framework

./: .gitignore  Cargo.toml  rust-toolchain
.github/workflows/: ci.yml
beacon_fork_choice/: Cargo.toml
beacon_fork_choice/src/: lib.rs
beacon_node/: Cargo.toml
beacon_node/src/: deposit_tree.rs  genesis.rs  hashing.rs  interop.rs  main.rs  node.rs  runtime_config.rs  slot_timer.rs
custody_game/: Cargo.toml
custody_game/src/: cg_consts.rs  cg_types.rs  main.rs
eth2_network/src/: lib.rs
eth2_network_libp2p/src/: lib.rs
helper_functions/helper_functions_1/src/: beacon_state_accessors.rs  misc.rs
helper_functions/helper_functions_2/src/: beacon_state_accessors.rs  crypto.rs  misc.rs  predicates.rs
helper_functions/helper_functions_interface/src/: crypto.rs  misc.rs
scripts/: ci.bash  clippy.sh  lighthouse_interop.bash  tarpaulin.sh
spec_test_utils/: Cargo.toml
spec_test_utils/src/: lib.rs
transition_functions/: Cargo.toml
transition_functions/src/: process_slot.rs
transition_functions/src/blocks/: block_processing.rs
transition_functions/src/epochs/: process_epoch.rs
transition_functions/src/rewards_and_penalties/: rewards_and_penalties.rs
types/: Cargo.toml
types/src/: beacon_chain_types.rs  beacon_state.rs  chain_spec.rs  config.rs  consts.rs  custody_game_types.rs  fixed_vector.rs  helper_functions_types.rs  lib.rs  primitives.rs  slot_epoch_macros.rs  types.rs
utils/bls/src/: macros.rs
utils/ssz_new/src/: lib.rs  utils.rs
