[package]
name = "custody_game"
version = "0.1.0"
authors = ["Valdas Rakutis <valdas@rakutis.lt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = '1.0.25'
thiserror = '1.0.9'
bls = { path = '../utils/bls' }
types = { path = '../types' }
transition_functions = { path = '../transition_functions' }